[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "ms-rdp-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "^1.0.0-alpha.0", features = ["serde-json"]}
napi-derive = { version = "^2.9.5" }
hex = { version = "^0.4"}
winapi = { version = "^0.3", features = ["winsock2"] }
minifb = { version = "^0.15" }
clap = { version = "^2.33"}
libc = { version = "^0.2"}
rdp-rs = "0.1.0"
hmac = "^0.10"
neon-serde = "0.4.0"
serde_derive = "1.0.80"
serde = "1.0.80"
serde_json = "1"

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}

[target.'cfg(windows)'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = { version = "^1.0.0-alpha.0" }

[profile.release]
lto = true
opt-level = 3
